<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsrb_interface_py</name>
  <version>0.12.0</version>
  <description>HSR-B Python Interface</description>

  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>
  <author>Akiyoshi Ochiai</author>

  <license>TMC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_nose</buildtool_depend>

  <exec_depend>boost</exec_depend>
  <depend>hsr_kinematics</depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend version_gte="0.5.16">tf2_ros</depend>
  <depend>actionlib</depend>
  <depend>cv_bridge</depend>
  <depend>control_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tmc_msgs</depend>
  <depend>tmc_vision_msgs</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>tmc_manipulation_msgs</depend>
  <depend>tmc_control_msgs</depend>
  <depend>tmc_robot_kinematics_model</depend>

  <depend>python3-lxml</depend>
  <depend>ipython3</depend>
  <depend>urdfdom_py</depend>
  <build_depend>eigen</build_depend>

  <test_depend>python3-mock</test_depend>
  <test_depend>hsrb_gazebo_launch</test_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
