<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsrb_interface_py</name>
  <version>0.12.0</version>
  <description>HSR-B Python Interface</description>

  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>
  <author>Akiyoshi Ochiai</author>

  <license>TMC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_nose</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>hsr_kinematics</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend version_gte="0.5.16">tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tmc_msgs</exec_depend>
  <exec_depend>tmc_planning_msgs</exec_depend>
  <exec_depend>tmc_manipulation_msgs</exec_depend>
  <exec_depend>tmc_control_msgs</exec_depend>
  <exec_depend>ipython3</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>

  <test_depend>python3-mock</test_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
