<?xml version="1.0"?>
<package>
  <name>hsrb_interfaces</name>
  <version>0.8.0</version>
  <description>HSR-B API Libraries</description>

  <maintainer email="akiyoshi_ochiai@mail.toyota.co.jp">Akiyoshi Ochiai</maintainer>

  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hsrb_interface_py</run_depend>

  <export>
    <metapackage />
  </export>
</package>
