<?xml version="1.0"?>
<package>
  <name>hsrb_interfaces</name>
  <version>0.11.1</version>
  <description>HSR-B API Libraries</description>

  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>

  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hsrb_interface_py</run_depend>

  <export>
    <metapackage />
  </export>
</package>
