<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsrb_interfaces</name>
  <version>0.12.0</version>
  <description>HSR-B API Libraries</description>

  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>
  <author>Keisuke Takeshita</author>

  <license>TMC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hsrb_interface_py</exec_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
